--- a/default.css
+++ b/default.css
@@ -1,15 +1,23 @@
 
 * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 .calculator {
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     border: 2px solid;
     width: 320px;
     margin: 100px auto;
 }
 #display {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
     flex: 0 0 auto;
     background-color: black;
     color: white;
@@ -20,13 +28,24 @@
     overflow: hidden;
 }
 .buttons {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
     flex: 0 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 
 }
 .button-row {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 80px;
     flex: 1 0 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 button {
@@ -49,6 +68,8 @@ button:hover:after {
 }
 #one, #two, #three, #four, #five, #six, #seven, #eight,
 #nine, #back, #divide, #multiply, #minus, #plus, #equal {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 25%;
     flex: 1 0 25%;
 }
 button#clear:after, button.num:after {
@@ -58,8 +79,12 @@ button.oper:after {
     background-color: orange;
 }
 #clear {
+    -webkit-box-flex: 2;
+    -ms-flex: 2 0 50%;
     flex: 2 0 50%;
 }
 #zero {
+    -webkit-box-flex: 3;
+    -ms-flex: 3 0 75%;
     flex: 3 0 75%;
 }
