--- a/default.css
+++ b/default.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     border: 2px solid;
     width: 320px;
-    margin: 100px auto;
+    margin: 10% auto;
 }
 #display {
     -webkit-box-flex: 0;
